--- a/lib/platform_web/templates/player/new.html.eex
+++ b/lib/platform_web/templates/player/new.html.eex
@@ -1,5 +1,24 @@
 <h2>New Player</h2>
+<%= form_for @changeset, player_path(@conn, :create), fn f -> %>
+    <%= if @changeset.action do %>
+        <div class="alert alert-danger">
+            <p>Oops, something went wrong! Please check the errors below.</p>
+        </div>
+    <% end %>
 
-<%= render "form.html", Map.put(assigns, :action, player_path(@conn, :create)) %>
+    <div class="form-group">
+        <%= label f, :username, "Player Username", class: "control-label" %>
+        <%= text_input f, :username, placeholder: "Enter username...", class: "form-control" %>
+        <%= error_tag f, :username %>
+    </div>
 
-<span><%= link "Back", to: player_path(@conn, :index) %></span>
+    <div class="form-group">
+        <%= label f, :password, "Player Password", class: "control-label" %>
+        <%= password_input f, :password, placeholder: "Enter password...", class: "form-control" %>
+        <%= error_tag f, :password %>
+    </div>
+
+    <div class="form-group">
+        <%= submit "Submit", class: "btn btn-primary" %>
+    </div>
+<% end %>
