--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -44,3 +44,14 @@
     max-height: 50px;
     overflow: hidden;
 }
+
+/* Games section */
+.game-item {
+    margin-bottom: 15px;
+    border: 2px solid black;
+    border-radius: 10px;
+}
+
+.media-object {
+    height: 120px;
+}
